fix(deps): bump the rmb group with 9 updates (#970)